--- a/DatingApp-SPA/src/app/nav-bar/nav-bar.component.html
+++ b/DatingApp-SPA/src/app/nav-bar/nav-bar.component.html
@@ -35,7 +35,8 @@
     
       <div class="dropdown-menu mt-3" *dropdownMenu role="menu" aria-labelledby="button-animated">
         <a class="dropdown-item" [routerLink]="['/member/edit']"  ><i class="fa fa-user"> </i> Edit Profile</a>
-        <div class="dropdown-divicer"> </div>
+        <!-- <div class="dropdown-divider"> </div> -->
+        <a class="dropdown-item" [routerLink]="['/member/settings']"  ><i class="fa fa-cog"> </i> Settings</a>
         <a class="dropdown-item"  (click)="logout()"> <i class="fa fa-sign-out" > </i> Logout</a>
       </div>
     </div>
