--- a/DatingApp-SPA/src/app/settings/settings.component.html
+++ b/DatingApp-SPA/src/app/settings/settings.component.html
@@ -1,41 +1,53 @@
 <div class="container mt-4">
     <h1> Settings </h1>
     <div class="">
-          <form class="form card px-3 py-3 mb-5 mt-4 d-flex flex-column justify-content-center align-items-start" #form="ngForm" (ngSubmit)="updateUserParams()" novalidate>
+          <form class="form card px-3 py-3 mb-5 mt-4 d-flex flex-column justify-content-center align-items-start" #form="ngForm" (ngSubmit)="updateUserSearchFilter()" novalidate>
             <div class="form-group d-flex flex-column justify-content-start align-items-start">
               <label for="minAge" class="mr-3">Age range</label>
               <div class="custom-slider">
-                <ngx-slider [options]="sliderOptions" [(value)]="this.userParams.minAge" [(highValue)]="this.userParams.maxAge" style="width: 400px"></ngx-slider>
+                <ngx-slider [options]="sliderOptions" 
+                (click)="updateUserSearchFilter()"
+                [(value)]="userSearchFilter.minAge" 
+                [(highValue)]="userSearchFilter.maxAge"
+
+                style="width: 400px"></ngx-slider>
               </div>
             </div>
           
             <div class="form-group  d-flex flex-row justify-content-center align-items-center">
-              <label for="gender">Show: </label>
+              <label for="gender">Show </label>
               <select class="form-control ml-1" style="width: 130px" 
-              [(ngModel)]="userParams.gender"
+              [(ngModel)]="userSearchFilter.gender"
+              (ngModelChange) = "updateUserSearchFilter()"
               id="gender" name="gender">
                 
-                <option *ngFor="let gender of genderList" [value]="gender.value">
+                <option *ngFor="let gender of genderList" 
+                
+                [value]="gender.value">
                     {{gender.display}}
                 </option>
               </select>
             </div>
-            <div class="btn-group">
-              <button type="submit" class="btn btn-primary" (click)="updateUserParams()" style="margin-left:10px">Apply Filters</button>
-              <button type="button" class="btn btn-info" (click)="resetUserParams()" style="margin-left:10px">Reset Filter</button>
-            </div>
-          
-            <div class="col">
-              <div class="btn-group float-right">
+
+            <div class="mb-3">
+              <label class="mr-2" for="orderBy">Order By </label>
+              <div class="btn-group">
                 <button type="button" name="orderBy" class="btn btn-primary"
-                (click)="updateUserParams()"
-                [(ngModel)]="userParams.orderBy" btnRadio="lastActive">Last Active</button>
+                (click)="updateUserSearchFilter()"
+                [(ngModel)]="userSearchFilter.orderBy" btnRadio="lastActive">Last Active</button>
                 
                 <button type="button" name="orderBy" class="btn btn-primary"  
-                (click)="updateUserParams()"
-                [(ngModel)]="userParams.orderBy" btnRadio="created">Newest Members</button>
+                (click)="updateUserSearchFilter()"
+                [(ngModel)]="userSearchFilter.orderBy" btnRadio="created">Newest Members</button>
               </div>
             </div>
+
+
+            <div class="btn-group float-right">
+              <button type="button" class="btn btn-info" (click)="resetUserSearchFilter()" style="margin-left:10px">Reset Filter</button>
+            </div>
+          
+            
           </form>
         
     </div>
