Added Swipe Left & Right Animations with HammerJS and Angular Animations

--- a/DatingApp-SPA/src/app/members/member-card-detailed/member-card-detailed.component.html
+++ b/DatingApp-SPA/src/app/members/member-card-detailed/member-card-detailed.component.html
@@ -1,11 +1,15 @@
-<div class="card member-card-detailed mb-4">
+<div class="card member-card-detailed mb-4"
+    [@cardAnimator]="animationState" 
+    (@cardAnimator.done)="resetAnimationState()"
+    (swipeleft)="skipUser()"
+    (swiperight)="sendLike(user.id)">
     <div class="card-img-wrapper">
         <img class="card-img-top" src="{{user.photoUrl || '../../../../../assets/user.png'}}" alt="{{user.knownAs}}">
       <ul class="list-inline member-icons animate text-center">
-        <button class="btn-md btn-primary ml-3 mr-3 member-icon" (click)="skipUser()"> <i class="fa fa-times-circle fa-3x"></i></button>
+        <button class="btn-md btn-primary ml-3 mr-3 member-icon" (tap)="skipUser()"> <i class="fa fa-times-circle fa-3x"></i></button>
         <button class="btn-md btn-primary ml-3 mr-3 member-icon"
         [routerLink]="['/members/', user.id]"> <i class="fa fa-user fa-3x"></i></button>
-        <button class="btn-md btn-primary ml-3 mr-3 member-icon" (click)="sendLike(user.id)"> <i class="fa fa-heart fa-3x"></i></button>
+        <button class="btn-md btn-primary ml-3 mr-3 member-icon" (tap)="sendLike(user.id)"> <i class="fa fa-heart fa-3x"></i></button>
         
       </ul>
       </div>
