Added NgxGallery to MemberCardDetailedComponent

--- a/DatingApp-SPA/src/app/members/member-card-detailed/member-card-detailed.component.css
+++ b/DatingApp-SPA/src/app/members/member-card-detailed/member-card-detailed.component.css
@@ -20,6 +20,7 @@
 .card-img-wrapper {
     overflow: hidden;
     position: relative;
+    z-index: 1;
 }
 
 .member-icons {
@@ -30,6 +31,7 @@
     margin-right: auto;
     margin-left: auto;
     opacity: 0;
+    z-index: 10000;
 }
 
 .member-icon {
