--- a/DatingApp-SPA/src/app/settings/settings.component.html
+++ b/DatingApp-SPA/src/app/settings/settings.component.html
@@ -15,7 +15,7 @@
             </div>
           
             <div class="form-group  d-flex flex-row justify-content-center align-items-center">
-              <label for="gender">Show </label>
+              <label for="gender">Interested in </label>
               <select class="form-control ml-1" style="width: 130px" 
               [(ngModel)]="userSearchFilter.gender"
               (ngModelChange) = "updateUserSearchFilter()"
@@ -30,7 +30,7 @@
             </div>
 
             <div class="mb-3">
-              <label class="mr-2" for="orderBy">Order By </label>
+              <label class="mr-2" for="orderBy">Order by </label>
               <div class="btn-group">
                 <button type="button" name="orderBy" class="btn btn-primary"
                 (click)="updateUserSearchFilter()"
