--- a/DatingApp-SPA/src/app/members/member-list/member-list.component.html
+++ b/DatingApp-SPA/src/app/members/member-list/member-list.component.html
@@ -7,7 +7,7 @@
 
           
           <div class="card-container">
-            <div  class="col-lg-6" *ngFor="let user of users.slice().reverse()"> <!--There 12 Grids in Bootstrap -->
+            <div  class="" *ngFor="let user of users.slice().reverse()"> <!--There 12 Grids in Bootstrap -->
               <!--lg for large, md medium screen, sm for small screen. The number represents how many grids an element takes up-->
               <app-member-card-detailed [user]="user" (skipCurrentUser)="skipCurrentUser($event)"></app-member-card-detailed>
             </div>
