--- a/DatingApp-SPA/src/app/settings/settings.component.html
+++ b/DatingApp-SPA/src/app/settings/settings.component.html
@@ -8,9 +8,8 @@
                 <ngx-slider [options]="sliderOptions" 
                 (click)="updateUserSearchFilter()"
                 [(value)]="userSearchFilter.minAge" 
-                [(highValue)]="userSearchFilter.maxAge"
-
-                style="width: 400px"></ngx-slider>
+                [(highValue)]="userSearchFilter.maxAge">
+              </ngx-slider>
               </div>
             </div>
           
