--- a/DatingApp-SPA/src/app/app.component.html
+++ b/DatingApp-SPA/src/app/app.component.html
@@ -1,5 +1,21 @@
-<app-nav-bar></app-nav-bar>
-    <section class="container">
-        <router-outlet></router-outlet>
-    </section>
+<app-nav-bar [(isSideDrawerOpen)]="isSideDrawerOpen" (toggleSideDrawer)="toggleSideDrawer($event)"></app-nav-bar>
+<mat-sidenav-container>
+    
+    <mat-sidenav *ngIf="loggedIn()" [(opened)]="isSideDrawerOpen" position="end">
+        <div class="text-light d-flex flex-column justify-content-center align-items-flex-start mt-3 ml-5"  >
+            <a class="sidenav-item" [routerLink]="['/member/edit']" (click)="toggleSideDrawer(false)" ><i class="fa fa-user fa-lg"> </i> Edit Profile</a>
+            <!-- <div class="dropdown-divider"> </div> -->
+            <a class="sidenav-item" [routerLink]="['/member/settings']" (click)="toggleSideDrawer(false)" ><i class="fa fa-cog fa-lg"> </i> Settings</a>
+            <a class="sidenav-item"  (click)="logout()"> <i class="fa fa-sign-out fa-lg" > </i> Logout</a>
+          </div>
+    </mat-sidenav>
+    <mat-sidenav-content>
+        
+        <section class="container">
+            <router-outlet></router-outlet>
+        </section>
+
+    </mat-sidenav-content>
+
+</mat-sidenav-container>
 <app-footer></app-footer>
