--- a/DatingApp-SPA/src/app/learn-more/learn-more.component.html
+++ b/DatingApp-SPA/src/app/learn-more/learn-more.component.html
@@ -1,3 +1,6 @@
 <h3> This is a project made for the Bachelor Thesis at Polytechnic University of Timişoara, 2021 </h3>
 <h4> Developed by Sergiu Valentin Radu, under the suerveilance of professor Dr. Eng. Sebastian Fuicu </h4>
-<button class="btn btn-small btn-secondary" (click)="backToHomeFunction()">Back</button>
+<img class="mt-4 mb-4" src="../../assets/upt-logo.png">
+<div>
+    <button class="btn btn-small btn-secondary" (click)="backToHomeFunction()">Back</button>
+</div>
