--- a/DatingApp-SPA/src/app/side-drawer/side-drawer/side-drawer.component.css
+++ b/DatingApp-SPA/src/app/side-drawer/side-drawer/side-drawer.component.css
@@ -1,10 +1,17 @@
-.side-drawer {
-    display: none;
-    position: fixed;
-    z-index: 101;
-    top: 0;
-    right: 0;
-    background: white;
-    width: 80%;
-    height: 100vh;
+.example-container {
+    width: 500px;
+    height: 1000px;
+    border: 1px solid rgba(0, 0, 0, 0.5);
   }
+  
+  .example-sidenav-content {
+    display: flex;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .example-sidenav {
+    padding: 20px;
+  }
+  
