--- a/DatingApp-SPA/src/app/nav-bar/nav-bar.component.css
+++ b/DatingApp-SPA/src/app/nav-bar/nav-bar.component.css
@@ -81,6 +81,10 @@ img.img-logo {
         transform: translateX(-10%);
         width: 70%;
     }
+
+    i {
+        font-size: 24px;
+    }
 }
 
 @media(max-width:294px) {
