--- a/DatingApp-SPA/src/app/nav-bar/nav-bar.component.html
+++ b/DatingApp-SPA/src/app/nav-bar/nav-bar.component.html
@@ -10,16 +10,16 @@
   
     <ul *ngIf="loggedIn()" class="navbar-nav ">
       <li class="nav-item" routerLinkActive="router-link-active">
-        <a class="nav-link" [routerLink]="['/matches']" alt="Matches"> <i class="fa fa-heart fa-2x"></i></a>
+        <a class="nav-link" [routerLink]="['/matches']" alt="Matches"> <i class="fa fa-thumbs-up fa-2x"></i></a>
       </li>
       <li class="nav-item" routerLinkActive="router-link-active">
-        <a class="nav-link" [routerLink]="['/members']"> <i class="fa fa-user fa-2x"> </i> </a>
+        <a class="nav-link" [routerLink]="['/members']"> <i class="fa fa-heart fa-2x"> </i> </a>
       </li>
       <li class="nav-item" routerLinkActive="router-link-active">
         <a class="nav-link" [routerLink]="['/messages']"    tabindex="-1" ><i class="fa fa-envelope fa-2x"> </i></a>
       </li>
       <li *appHasRole="['Admin', 'Moderator']" class="nav-item" routerLinkActive="router-link-active">
-        <a class="nav-link" [routerLink]="['/admin']" >Admin</a>
+        <a class="nav-link" [routerLink]="['/admin']"> <i class="fa fa-users fa-2x"> </i> </a>
       </li>
     </ul>
 
