--- a/DatingApp-SPA/src/app/members/member-list/member-list.component.html
+++ b/DatingApp-SPA/src/app/members/member-list/member-list.component.html
@@ -1,6 +1,6 @@
-<div class="text-center mt-3">
+<!-- <div class="text-center mt-3">
   <h2>Find your next match - {{pagination.totalItems}} found</h2>
-</div>
+</div> -->
 
 
 <div class="container mt-5">
