--- a/DatingApp-SPA/src/styles.css
+++ b/DatingApp-SPA/src/styles.css
@@ -51,6 +51,8 @@ body::-webkit-scrollbar-thumb {
     padding-top: -30px;
     padding-bottom: -20px;
 }
+
+
   .nav-tabs > li.open, .member-tabset > .nav-tabs > li:hover {
     border-bottom: 4px solid #fbcdcf;
   }
@@ -103,7 +105,7 @@ body::-webkit-scrollbar-thumb {
 
   @media (max-width: 768px) {
     .footer {
-      font-size: 12px;
+      display: none;
     }
   }
 
