--- a/DatingApp-SPA/src/app/members/member-list/member-list.component.html
+++ b/DatingApp-SPA/src/app/members/member-list/member-list.component.html
@@ -4,12 +4,16 @@
 
 
 <div class="container mt-5">
-
+    
           
           <div class="card-container">
             <div  class="" *ngFor="let user of users.slice().reverse()"> <!--There 12 Grids in Bootstrap -->
               <!--lg for large, md medium screen, sm for small screen. The number represents how many grids an element takes up-->
               <app-member-card-detailed [user]="user" (skipCurrentUser)="skipCurrentUser($event)"></app-member-card-detailed>
+            </div>
+            <div class="text-center" *ngIf="users.length === 0">
+              <h1>No more users available</h1>
+              <h2>Please try again later</h2>
             </div>
           </div>
         </div>
