--- a/DatingApp-SPA/src/app/members/member-card-detailed/member-card-detailed.component.css
+++ b/DatingApp-SPA/src/app/members/member-card-detailed/member-card-detailed.component.css
@@ -1,24 +1,41 @@
 .member-card-detailed {
-    box-sizing: border-box;
+    box-sizing: content-box;
+    position: relative;
+    width: 550px;
+    height: 769px;
+    overflow: scroll;
 }
+
+
+.member-card-detailed::-webkit-scrollbar {
+    display: none;
+  }
 
 .card {
     border: 2px solid #ccc;
     border-radius: 4%;
-    overflow: hidden;
+    
     cursor: pointer;
     position: relative;
 }
 
-.card:before {
-  content: "";
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  z-index: -1;
-  box-shadow: 2px 2px 8px rgb(213, 213, 213);
+
+.card-content,
+.card-user-photos {
+    position: relative;
+    
+}
+.card-user-photos {
+    overflow: hidden;
+    
+}
+
+.card-body {
+    z-index: 9999999;
+}
+
+.card-title {
+    font-size: 1.5rem;
 }
 
 
@@ -38,7 +55,7 @@
     z-index: 10000;
 }
 
-.card-img-wrapper:hover .member-icons {
+.card-content:hover .member-icons {
     bottom: 0;
     opacity: 1;
 }
@@ -56,19 +73,29 @@
    transform: scale(1.1) 
 }
 
-.card-title {
-    font-size: 1.5rem;
-}
-
 
 @media (min-width: 768px) {
     .member-icons {
     bottom: -30%;
     opacity: 0;
     }
-    .card-img-wrapper:hover .member-icons {
+    .card-content:hover .member-icons {
         bottom: 0;
         opacity: 1;
+    }
+}
+
+@media (max-width: 605px) {
+    .member-card-detailed {
+        width: 400px;
+        height: 569px;
+    }
+}
+
+@media (max-width: 410px) {
+    .member-card-detailed {
+        width: 310px;
+        height: 479px;
     }
 }
 
