--- a/DatingApp-SPA/src/app/members/member-card-detailed/member-card-detailed.component.html
+++ b/DatingApp-SPA/src/app/members/member-card-detailed/member-card-detailed.component.html
@@ -1,23 +1,63 @@
-<div class="card member-card-detailed mb-4"
+<div class="card member-card-detailed mb-4" #memberCardDetailed
     [@cardAnimator]="animationState" 
     (@cardAnimator.done)="resetAnimationState()"
     (swipeleft)="skipUser()"
     (swiperight)="sendLike(user.id)"
-    (swipeup)="viewMoreDetails(user.id)">
-    <div class="card-img-wrapper">
-      <ngx-gallery class="card-img-top" [options]="galleryOptions" [images]="galleryImages"> </ngx-gallery>
-        <ul class="list-inline member-icons animate text-center">
-          <button class="btn-md btn-primary ml-3 mr-3 member-icon" (tap)="skipUser()"> <i class="fa fa-times-circle fa-3x"></i></button>
-          <button class="btn-md btn-primary ml-3 mr-3 member-icon"
-          [routerLink]="['/members/', user.id]"> <i class="fa fa-arrow-down fa-3x"></i></button>
-          <button class="btn-md btn-primary ml-3 mr-3 member-icon" (tap)="sendLike(user.id)"> <i class="fa fa-heart fa-3x"></i></button>
-        </ul>
+    (swipeup)="scrollToTheBottom()"
+    (swipedown)="scrollToTheTop()">
+    <div class="card-content">
+      <div class="card-user-photos" #scrollToTop>
+        <ngx-gallery #gallery class="card-img-top"  [options]="galleryOptions" [images]="galleryImages"> </ngx-gallery>
+          <ul class="list-inline member-icons animate text-center">
+            <button class="btn-md btn-primary ml-3 mr-3 member-icon" (tap)="skipUser()"> <i class="fa fa-times-circle fa-3x"></i></button>
+            <button class="btn-md btn-primary ml-3 mr-3 member-icon" (tap)="scrollToTheBottom()"> <i class="fa fa-arrow-down fa-3x"></i></button>
+            <button class="btn-md btn-primary ml-3 mr-3 member-icon" (tap)="sendLike(user.id)"> <i class="fa fa-heart fa-3x"></i></button>
+          </ul>
 
-      
-      
-    </div>
+      </div
+      >
       <div class="card-body p-1">
         <h6 class="card-title text-center mb-1"> {{user.knownAs}}, {{user.age}} 
         </h6>
-        <p class="card-text text-muted text-center"> <i class="fa fa-map-marker"></i> {{user.city}} </p>    </div>
-  </div>
+        <p class="card-text text-muted text-center"> <i class="fa fa-map-marker"></i> {{user.city}} </p>
+      </div>
+
+      <div class="card-footer card-user-info text-muted">
+        <div> 
+            <i class="fa fa-map-marker"></i> {{user.city}}, {{user.country}}
+        </div>
+        <div> 
+            <i class="fa fa-check-circle"></i> Last active {{ user.lastActive | date: 'medium' | timeAgo }}
+        </div>
+        <div class="mb-4"> 
+            <i class="fa fa-user-circle"></i> Member Since {{ user.created | date: 'mediumDate' }}
+        </div>
+
+        <div *ngIf="!isStringEmpty(user.introduction)" class="mb-2 text-center">
+            <strong>Description</strong>
+            <div class="text-left">
+                <p>{{user.introduction}}</p>
+            </div>
+        </div>
+
+        <div *ngIf="!isStringEmpty(user.lookingFor)" class="mb-2 text-center"> 
+            <strong>Looking For</strong>
+            <div class="text-left">
+                <p>{{user.lookingFor}}</p>
+            </div>
+        </div>
+
+        <div *ngIf="!isStringEmpty(user.interests)" class="mb-4 text-center" > 
+            <strong>Interests</strong>
+            <div class="text-left">
+                <p>{{user.interests}}</p>
+            </div>
+        </div>
+
+        <div class="card-user-info-end" #scrollToBottom>
+        </div>
+        
+    </div>      
+
+   </div>
+</div>
