--- a/DatingApp-SPA/src/app/app.component.html
+++ b/DatingApp-SPA/src/app/app.component.html
@@ -20,4 +20,4 @@
     </mat-sidenav-content>
 
 </mat-sidenav-container>
-<app-footer></app-footer>
+<app-footer [isSideDrawerOpen]="isSideDrawerOpen"></app-footer>
