--- a/DatingApp-SPA/src/app/footer/footer.component.html
+++ b/DatingApp-SPA/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
 <!-- Footer -->
-<footer class="footer font-small">
+<footer class="footer font-small" [ngClass]="isSideDrawerOpen ? 'sidenav-open' : 'footer-sidenav-closed'">
 
   <!-- Copyright -->
   <div class="footer-copyright text-light font-small text-center py-3">© 2021 Bachelor Thesis Project Made By Sergiu V. Radu
