--- a/DatingApp-SPA/src/app/nav-bar/nav-bar.component.html
+++ b/DatingApp-SPA/src/app/nav-bar/nav-bar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-primary">
+<nav class="navbar navbar-expand-md navbar-dark bg-primary" [ngClass]="isSideDrawerOpen ? 'sidenav-open' : 'navbar-sidenav-closed'">
   <div class="container collapse navbar-collapse">
     <div class="navbar-logo">
       <a class="" [routerLink]="['/home']">
