--- a/DatingApp-SPA/src/styles.css
+++ b/DatingApp-SPA/src/styles.css
@@ -4,6 +4,7 @@
 @import '../node_modules/alertifyjs/build/css/alertify.min.css';
 @import '../node_modules/alertifyjs/build/css/themes/bootstrap.min.css';
 @import '../node_modules/ngx-bootstrap/datepicker/bs-datepicker.css';
+@import url('https://fonts.googleapis.com/css2?family=Satisfy&display=swap');
 
 /*SNIPPETS FOR A TABBED PANEL*********/
 .tab-panel {
@@ -41,7 +42,22 @@ body::-webkit-scrollbar-thumb {
   background-color: #ccc;
 }
 
+.navbar-sidenav-closed {
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
+  transition: box-shadow 0.3s;
+  transition-delay: 0.1s;
+}
 
+.footer-sidenav-closed {
+box-shadow: 0px -2px 4px rgba(0, 0, 0, 0.3);
+transition: box-shadow 0.3s;
+transition-delay: 0.1s;
+}
+
+.sidenav-open {
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0);
+  transition: box-shadow 0s;
+}
 
 .footer{  
     background-color: #eb6864;
@@ -50,6 +66,7 @@ body::-webkit-scrollbar-thumb {
     width: 100%;
     padding-top: -30px;
     padding-bottom: -20px;
+    z-index: 100;
 }
 
 
