--- a/DatingApp-SPA/src/app/matches/matches.component.html
+++ b/DatingApp-SPA/src/app/matches/matches.component.html
@@ -1,13 +1,13 @@
 <div class="text-center mt-3">
-  <h2>{{likesParam === 'Likers' ? 'Members who like me' : 'Members who I\'ve Liked'}} : {{pagination.totalItems}}</h2>
+  <h2>{{likersOrMatchesParam === 'Likers' ? 'Members who like me' : 'Members who I matched with'}} : {{pagination.totalItems}}</h2>
 </div>
 
 <div class="container mt-3">
 
 <div class="row">
   <div class="btn-group">
-    <button class="btn btn-primary" [(ngModel)]="likesParam" btnRadio="Likers" (click)="loadUsers()">Members who like me</button>
-    <button class="btn btn-primary" [(ngModel)]="likesParam" btnRadio="Likees" (click)="loadUsers()">Members who I like</button>
+    <button class="btn btn-primary" [(ngModel)]="likersOrMatchesParam" btnRadio="Likers" (click)="loadUsers()">Members who like me</button>
+    <button class="btn btn-primary" [(ngModel)]="likersOrMatchesParam" btnRadio="Matches" (click)="loadUsers()">Members who I matched with</button>
   </div>
 </div>
 
