--- a/DatingApp-SPA/src/app/members/member-card/member-card.component.html
+++ b/DatingApp-SPA/src/app/members/member-card/member-card.component.html
@@ -3,7 +3,7 @@
       <img class="card-img-top" src="{{user.photoUrl || '../../../../../assets/user.png'}}" alt="{{user.knownAs}}">
     <ul class="list-inline member-icons animate text-center">
       <button class="btn-md btn-primary ml-1 mr-1"
-      [routerLink]="['/members/', user.id]"> <i class="fa fa-user"></i></button>
+      [routerLink]="['/matches/', user.id]"> <i class="fa fa-user"></i></button>
       <button class="btn-md btn-primary ml-1 mr-1" (click)="sendLike(user.id)"> <i class="fa fa-heart"></i></button>
       <button class="btn-md btn-primary ml-1 mr-1" [routerLink]="['/matches/', user.id]" [queryParams]="{tab: 3}"> <i class="fa fa-envelope"></i></button>
     </ul>
